# injila

./: CMakeLists.txt  README.md
image_annotator/: CMakeLists.txt  graphics_annotator.cpp  graphics_annotator.hpp  graphics_items.cpp  graphics_items.hpp  label_editor.cpp  label_editor.hpp  main.cpp  main_window.cpp  main_window.hpp
kmeans/: kmeans.cpp  kmeans.hpp  random.hpp
src/DO/: CMakeLists.txt
src/DO/Injila/: CMakeLists.txt
src/DO/Injila/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp
src/DO/Injila/ImageAnnotator/: CMakeLists.txt  Utilities.hpp  main.cpp
src/DO/Injila/ImageAnnotator/Controllers/: AnnotationController.cpp  AnnotationController.hpp
src/DO/Injila/ImageAnnotator/Models/: Annotation.hpp  Segmentation.cpp  Segmentation.hpp
src/DO/Injila/ImageAnnotator/Views/: AnnotationView.cpp  AnnotationView.hpp  FolderView.cpp  FolderView.hpp  GraphicsItems.cpp  GraphicsItems.hpp  LabelEditor.cpp  LabelEditor.hpp  MainWindow.cpp  MainWindow.hpp
src/DO/Injila/KMeans/: CMakeLists.txt  KMeans.cpp  KMeans.hpp  Random.hpp
src/DO/Injila/Service/: CMakeLists.txt  HttpRequests.cpp  HttpRequests.hpp  SegmentationIO.cpp  SegmentationIO.hpp
src/DO/Injila/Service/test/: CMakeLists.txt  test_service.cpp
src/DO/Injila/Superpixel/: CMakeLists.txt  ERSInterface.cpp  ERSInterface.hpp
src/DO/Injila/Superpixel/example/: CMakeLists.txt  example.cpp
src/DO/Injila/Utilities/: CMakeLists.txt  Logging.hpp
superpixel/: CMakeLists.txt  ERSInterface.cpp  ERSInterface.hpp  main.cpp
